<resources>
    <string name="app_name">Jokex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_continue">Log In to Continue</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up"><u> Dont have an account? Register</u></string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_log_in"><u>Already have an account? Log In</u></string>
    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="source_code">Source Code</string>
    <string name="about">About</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="punchline">Punchline</string>
    <string name="setup">Setup</string>
    <string name="add">Add</string>
</resources>