<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_read"
            android:title="@string/read"
            android:icon="@drawable/ic_read"
            android:checked="true"
        />

        <item
            android:id="@+id/nav_write"
            android:icon="@drawable/ic_write"
            android:title="@string/write"
            />

    </group>


    <item android:title="@string/settings">

        <menu>
            <item
                android:id="@+id/nav_theme"
                android:icon="@drawable/ic_theme"
                android:title="@string/dark_theme"
                app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
                />
            <item
                android:id="@+id/nav_source_code"
                android:icon="@drawable/ic_source_code"
                android:title="@string/source_code"/>

            <item
                android:id="@+id/nav_signout"
                android:title="@string/log_out"
                android:icon="@drawable/ic_signout"
                />


        </menu>
    </item>

</menu>